# test-code

./: README.md  实例.cpp
cublas/: CMakeLists.txt  main.cpp
cublas-build/: CMakeCache.txt  Makefile  cmake_install.cmake  cublas  cublas.cbp
gaussan-newton/: CMakeLists.txt  cholesky.cpp  cholesky.h  main.cpp
gaussan-newton-build/: CMakeCache.txt  Makefile  cmake_install.cmake  testopencv  testopencv.cbp
hellotoon/toontest/: CMakeLists.txt  main.cpp
hellotoon/toontest-build/: CMakeCache.txt  Makefile  cmake_install.cmake  toontest  toontest.cbp
hellotoon/toontest/cmake/:  FindTooN.cmake
helloword/hello/: CMakeLists.txt  main.cpp
helloword/hello-build/: CMakeCache.txt  Makefile  cmake_install.cmake  hello  hello.cbp
kinfu/kinfu/: CMakeLists.txt  main.cpp
kinfu/kinfu-build/: CMakeCache.txt  Makefile  cmake_install.cmake  kinfu.cbp
kinfu/kinfu-build/Engine/: Makefile  cmake_install.cmake
kinfu/kinfu-build/ITMLib/: Makefile  cmake_install.cmake
kinfu/kinfu-build/ORUtils/: Makefile  cmake_install.cmake
kinfu/kinfu-build/Utils/: Makefile  cmake_install.cmake
kinfu/kinfu/Engine/: CMakeLists.txt  UIEngine.cpp  UIEngine.h
kinfu/kinfu/ITMLib/: CMakeLists.txt  ITMLib.h
kinfu/kinfu/ITMLib/Engine/: ITMCompositeTracker.h  ITMMainEngine.cpp  ITMMainEngine.h  ITMTrackerFactory.h  ITMViewBuilder.h
kinfu/kinfu/ITMLib/Engine/DeviceAgnostic/: ITMLowLevelEngine.h  ITMRepresentationAccess.h  ITMVisualisationEngine.h
kinfu/kinfu/ITMLib/Engine/DeviceSpecific/CUDA/: ITMLowLevelEngine_CUDA.cu  ITMLowLevelEngine_CUDA.h  ITMViewBuilder_CUDA.cu  ITMViewBuilder_CUDA.h  ITMVisualisationEngine_CUDA.cu
kinfu/kinfu/ITMLib/Objects/: ITMTrackingState.h
kinfu/kinfu/ITMLib/Utils/: ITMLibDefines.h  ITMMath.h
kinfu/kinfu/ORUtils/: CUDADefines.h  Matrix.h  MemoryBlock.h  PlatformIndependence.h  Vector.h
kinfu/kinfu/cmake/: FindOpenNI.cmake
learncuda/: 351492872cuda_by_example.rar
learncuda/learncuda1/learncuda1/: CMakeLists.txt  main.cpp
learncuda/learncuda1/learncuda1-build/: CMakeCache.txt  Makefile  cmake_install.cmake  learncuda1  learncuda1.cbp
learncuda/learncuda1/learncuda1-build/src/: Makefile  cmake_install.cmake
learncuda/learncuda1/learncuda1/src/: CMakeLists.txt  bitmap.cu  bitmap.h  book.h  dot.cu  dot.h  gl_helper.h  init_cuda.cu  init_cuda.h  julia.cu  julia.h  raytracking.cu  raytracking.h  texture.cu  texture.h  texture2D.cu  texture2D.h
testcuda/testcuda/: CMakeLists.txt
testcuda/testcuda-build/: CMakeCache.txt  Makefile  cmake_install.cmake  testcuda.cbp
testopencv/testopencv/: CMakeLists.txt  main.cpp
testopencv/testopencv-build/: CMakeCache.txt  Makefile  cmake_install.cmake  testopencv  testopencv.cbp
timetest/timetest/: CMakeLists.txt  main.cpp
timetest/timetest-build/: CMakeCache.txt  Makefile  cmake_install.cmake  timetest  timetest.cbp
